cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(GeneticAlgorithmByC++ VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 11)

INCLUDE_DIRECTORIES(includes)


add_subdirectory(src)

SET(CMAKE_BUILD_TYPE "Debug")  
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -Wall -ggdb")  
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -Wall")